fix bugs,add animation,design

--- a/app/scripts/ttoffcanvas/views/navtemplate/index.html
+++ b/app/scripts/ttoffcanvas/views/navtemplate/index.html
@@ -1,1 +1,5 @@
-<button ng-click="checkStatus()" ng-class="{'active': ocStatus}">Click</button>
+<button class="toogle-btn hamburger hamburger--collapse" ng-click="checkStatus()" ng-class="{'is-active': ocStatus}">
+  <span class="hamburger-box">
+    <span class="hamburger-inner"></span>
+  </span>
+</button>
