--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,20 +1,27 @@
 // bower:scss
+@import "css-hamburgers/_sass/hamburgers/hamburgers.scss";
 // endbower
 @import "partial/meyer-reset";
-$primaryColor: #2196F3;
+$primaryColor: #8CD2FF;
 $lighterColor: #fff;
 $lighterColorD1: #e0e0e0;
 $lighterFontColor: #767676;
 $darkFontColor: #333;
 $canvasSelector: "[tt-canvas]";
 $navSelector: "[tt-nav]";
+@mixin smallDevice {
+  @media (max-width:768px) {
+    @content;
+  }
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
   color: #000;
   padding: 0.2em 0;
 }
-.clearfix{
+._clearfix{
   &:before,&:after{
     display: table;
     content: " ";
@@ -23,77 +30,156 @@ $navSelector: "[tt-nav]";
     clear: both;
   }
 }
+._linear-trans{
+  transition: all .5s cubic-bezier(.785,.135,.15,.86);
+}
+html,body{
+  width: 100%;
+  height: 100%;
+}
 body{
   background: $primaryColor;
-  color: $lighterColor;
   font-family: 'Lato', sans-serif;
+}
+.tt-content-wrapper{
+  background: $primaryColor url("../images/bg.svg") repeat;
   font-size: 14px;
   line-height: 1.42857143;
-}
-div#{$canvasSelector} {
-  background: #fff;
-  width: 300px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
-  .sidebar-header{
-    color: $lighterFontColor;
-    padding: 15px;
-    border-bottom: 1px solid $lighterFontColor;
-    margin-bottom: 20px;
-    h3{
-      font-size: 24px;
+  color: $lighterColor;
+  width: 100%;
+  height: 100%;
+  .intro-section{
+    color: $lighterColor;
+    width: 100%;
+    text-align: center;
+    margin-top: 10%;
+    text-transform: uppercase;
+    h2{
+      font-size: 36px;
+      letter-spacing: 24px;
+      @include smallDevice {
+        font-size: 24px;
+        letter-spacing: 18px;
+      }
+
     }
-  }
-  .sidebar-menu{
-    ul {
-      li {
-        a {
-          font-size: 16px;
-          font-weight: 700;
-          color: $darkFontColor;
-          text-decoration: none;
-          padding: 10px 15px;
-          display: block;
-          i{
-            margin-right: 5px;
-          }
-        }
+    h3{
+      letter-spacing: 18px;
+      font-size: 24px;
+      @include smallDevice {
+        font-size: 18px;
+        letter-spacing: 12px;
       }
     }
-  }
-  .sidebar-footer{
-    background: $lighterColorD1;
-    position: absolute;
-    bottom: 0;
+}
+  .toogle-btn{
+    background: $lighterColor;
+    padding: 18px;
+   .hamburger-inner{
+     background: $lighterFontColor;
+     &:before{
+       background: $lighterFontColor;
+     }
+     &:after{
+       background: $lighterFontColor;
+     }
+   }
+   &:hover,&:focus,&:active{
+     outline: none;
+   }
+ }
+  div#{$canvasSelector} {
+    background: #fff;
+    width: 250px;
+    position: fixed;
+    top: 0;
     left: 0;
     right: 0;
-    ul{
-      @extend .clearfix;
-      width: 100%;
-      display: block;
-      li{
-        display: block;
-        width: 33.33333333333%;
-        position: relative;
-        float: left;
-        a{
-          display: block;
-          text-align: center;
-          font-size: 18px;
-          padding: 10px;
-          color: $darkFontColor;
-          border-right: 1px solid $lighterFontColor;
+    bottom: 0;
+    box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
+    transform: translateX(-100%);
+    @extend ._linear-trans;
+    &.is-active{
+      transform: translateX(0);
+      @extend ._linear-trans;
+    }
+    .sidebar-header{
+      color: $lighterFontColor;
+      padding: 15px;
+      border-bottom: 1px solid rgba($lighterFontColor,0.2);
+      margin-bottom: 20px;
+      h3{
+        font-size: 24px;
+      }
+    }
+    .sidebar-menu{
+      ul {
+        li {
+          a {
+            font-size: 16px;
+            font-weight: 700;
+            color: $darkFontColor;
+            text-decoration: none;
+            padding: 10px 15px;
+            display: block;
+            i{
+              margin-right: 5px;
+            }
+          }
         }
-        &:last-child{
+      }
+    }
+    .sidebar-footer{
+      background: $lighterColorD1;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      ul{
+        @extend ._clearfix;
+        width: 100%;
+        display: block;
+        li{
+          display: block;
+          width: 33.33333333333%;
+          position: relative;
+          float: left;
           a{
-            border-right: none;
+            display: block;
+            text-align: center;
+            font-size: 18px;
+            padding: 10px;
+            color: $darkFontColor;
+            border-right: 1px solid $lighterFontColor;
+          }
+          &:last-child{
+            a{
+              border-right: none;
+            }
           }
         }
       }
     }
   }
+  div#{$navSelector} {
+    .toogle-btn{
+      @extend ._linear-trans;
+      transform: translateX(0);
+      &.is-active{
+        @extend ._linear-trans;
+        transform: translateX(250px);
+      }
+    }
+  }
+  .app-meta{
+    position: fixed;
+    bottom: 50px;
+    left: 0;
+    right: 0;
+    color: $darkFontColor;
+    letter-spacing: 5px;
+    font-size: 14px;
+    text-align: center;
+  }
 }
+
